sumo/tests/dfrouter/errors/detector_files/false_detectors_file3/errors.dfrouter
Error: Could not open detector file 'xxx.det.xml'
Quitting (on error).
